# mlops-mastery-2026

./: .gitignore  AI.txt  MLOps_Detailed_Curriculum_2026.md  MLOps_Mastery_Complete_Guide_2026.md  MLOps_Mastery_Guide_2026.md  MLOps_Mastery_Roadmap.pptx  MLOps_Roadmap.pptx  README.md
mlops-week1/: generate_roadmap.py  pyproject.toml
mlops-week1/app/: main.py
mlops-week1/app/api/v1/: schemas.py
mlops-week1/app/core/: config.py  logging.py
mlops-week1/app/models/: classifier.py
mlops-week1/tests/: test_api.py
